--- a/Getx/android/app/src/main/AndroidManifest.xml
+++ b/Getx/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.getx.project">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"  tools:node="remove"  tools:ignore="QueryAllPackagesPermission"/>
    <application
         android:icon="@mipmap/ic_launcher"
