--- a/Getx/jsons/model/applicationlist/applicationlistmodel.json
+++ b/Getx/jsons/model/applicationlist/applicationlistmodel.json
@@ -1,6 +1,9 @@
 {
     "status": "200",
     "message": "success",
-    "applicationlist": "$[]nodeapplicationlist",
-    "nodeapplicationojb": "$nodeapplicationojb"
+    "applicationlist": "$[]aestmodel",
+    "point?": {
+        "longitude": 58.1234,
+        "latitude": 12.123
+    }
 }
