--- a/Getx/pubspec.yaml
+++ b/Getx/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   font_awesome_flutter: ^10.2.1 # supper icon can search => https://fontawesome.com/search
   animated_text_kit: ^4.2.2
   story: ^0.8.0
+  curved_navigation_bar: ^1.0.3
+  quiver: ^3.2.1
+
+  
   
   
 
@@ -59,7 +63,9 @@ dev_dependencies:
 
   json_model: ^1.0.0 # gen model from json
   build_runner: ^2.2.1 # run gen json model -> flutter packages pub run json_model
-  json_serializable: ^6.5.0 # json 
+  json_serializable: ^6.5.0 # json
+  
+  json_to_model: ^3.0.1
 
 
 
